--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,16 @@
 [tool.poetry]
 name = "tedutil"
-version = "0.11.0"
-description = "Varius utility functions"
-authors = ["tedlaz <tedlaz@gmail.com>"]
+version = "0.12.0"
+description = "Varius Greek functions"
+authors = ["Ted Lazaros <tedlaz@gmail.com>"]
 license = "GPL"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.9"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "^6.2.3"
+flake8 = "^3.9.1"
 autopep8 = "^1.5.6"
 
 [build-system]
