--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "tedutil"
-version = "0.12.0"
+version = "0.13.0"
 description = "Varius Greek functions"
 authors = ["Ted Lazaros <tedlaz@gmail.com>"]
 license = "GPL"
@@ -12,6 +12,8 @@ python = "^3.9"
 pytest = "^6.2.3"
 flake8 = "^3.9.1"
 autopep8 = "^1.5.6"
+rope = "^0.19.0"
+black = "^21.4b2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
