--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,13 +1,13 @@
 # This is a basic workflow to help you get started with Actions
 
 name: CodeCov
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
   workflow_dispatch:
 
 jobs:
@@ -15,19 +15,19 @@ jobs:
     runs-on: ubuntu-latest
     env:
       OS: ubuntu-latest
-      PYTHON: '3.8'
+      PYTHON: "3.8"
     steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: ‘2’
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: ‘2’
 
-    - name: Setup Python
-      uses: actions/setup-python@master
-      with:
-        python-version: 3.8
-    - name: Generate Report
-      run: |
-        pip install coverage
-        coverage run -m unittest
-    - name: Upload Coverage to Codecov
-      uses: codecov/codecov-action@v1
+      - name: Setup Python
+        uses: actions/setup-python@master
+        with:
+          python-version: 3.8
+      - name: Generate Report
+        run: |
+          pip install coverage
+          coverage run -m pytest
+      - name: Upload Coverage to Codecov
+        uses: codecov/codecov-action@v1
