--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ flake8 = "^3.9.1"
 autopep8 = "^1.5.6"
 rope = "^0.19.0"
 black = "^21.4b2"
+coverage = "^5.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
